# turbo-mailer-server/docs/swagger.json
@@ -1408,7 +1408,7 @@
                 "content": {
                     "type": "string"
                 },
-                "context_type": {
+                "content_type": {
                     "description": "MIME type",
                     "type": "string"
                 },
@@ -1426,6 +1426,12 @@
                 },
                 "max_dispatch_pre_hour": {
                     "type": "integer"
+                },
+                "metadata": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "pools": {
                     "type": "array",
